2006-05-02  Adam Jackson  <ajax@freedesktop.org>

	* render/mitri.c:
	Bug #6642: Fix buffer overflow in Render.  (CVE 2006-1526, patch
	from Eric Anholt)

2006-04-28  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Bump to 1.0.99.902

2006-04-28  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86pciBus.c:
	* hw/xfree86/os-support/shared/stdResource.c:
	Bug #6750: Fixup for quirky Intel bridges. (Dave Airlie)

2006-04-28  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/os-support/bus/Pci.c:
	* hw/xfree86/os-support/bus/Pci.h:
	* hw/xfree86/os-support/bus/linuxPci.c:
	Bug #6751: Use sysfs to read card ROMs if available. (Dave 
	Airlie)

2006-04-24  Adam Jackson  <ajax@freedesktop.org>

	* fb/fbcompose.c:
	* render/picture.c:
	* render/picture.h:
	Bug #6325: Add support for x4a4 picture format.

	* hw/xfree86/os-support/linux/lnx_KbdMap.c:
	Bug #6472: Fix a static buffer overflow.  (David Woodhouse)

2006-04-18  Donnie Berkholz  <spyderous@gentoo.org>

	reviewed by: Alan Coopersmith

	* hw/xfree86/utils/xorgcfg/interface.c:
	* hw/xfree86/utils/xorgcfg/keyboard-cfg.c:
	* hw/xfree86/utils/xorgcfg/keyboard-cfg.h:
	* hw/xfree86/utils/xorgcfg/loader.c:
	* hw/xfree86/utils/xorgcfg/text-mode.c:
	* hw/xfree86/utils/xorgconfig/cards.c:
	* hw/xfree86/utils/xorgconfig/xorgconfig.c:
	Update all prefixes in config tools, so they mostly work again. Also, make
	RgbPath commented out when using xorgconfig. Start using /dev/input/mice as
	the default mouse location on Linux.

2006-04-17  Donnie Berkholz  <spyderous@gentoo.org>

	reviewed by: Adam Jackson

	* exa/Makefile.am:
	* randr/Makefile.am:
	Bug #6628: Wrap a couple more SDK headers in if XORG, as per Dave Airlie's
	commit on 2006-01-18.

2006-04-17  Donnie Berkholz  <spyderous@gentoo.org>

	reviewed by: Adam Jackson

	* hw/kdrive/ephyr/Makefile.am:
	Bug #6628: Fix kdrive build by linking in libexa before KDRIVE_LIBS.

2006-04-15  Luc Verhaegen  <libv@skynet.be>
